--- a/src/app/layout/component/detail-card/detail-card.component.html
+++ b/src/app/layout/component/detail-card/detail-card.component.html
@@ -1,4 +1,4 @@
-<div class="w-full px-4 pb-5" style="background-color: white; height: 43%;">
+<div class="w-full px-4 pb-5 white" style="background-color: white;">
     <div class="flex flex-row align-items-center pt-4 pb-3">
         <div class="font-semibold text-sm gray ">Marca</div>
         <button style="width: 39px; height: 39px; display: flex; justify-content: center; "pButton pRipple type="button" (click)="favorite = !favorite"
@@ -8,16 +8,16 @@
                 }}</i>
         </button>
     </div>
-    <div class="text-3xl font-bold pt-2 pb-3 w-9">
+    <div class="font-bold text-xl pt-2 pb-3 w-9">
         Estas son dos lineas de texto mas o menos
     </div>
     <div class="flex flex-row">
-        <div class="text-3xl font-bold orange mr-3">$ 100.00</div>
-        <div class="text-xl font-bold backorange px-1 border-round pt-1">
+        <div class="text-lg font-bold orange mr-3">$ 100.00</div>
+        <div class="text-base font-bold backorange px-1 border-round pt-1">
             -10%
         </div>
     </div>
-    <div class="text-2xl font-medium gray">$ 100.00</div>
+    <div class="text-base font-medium gray">$ 100.00</div>
     <div class="flex flex-row pt-4">
         <button pButton pRipple type="button" icon="pi pi-minus"
             class="p-button-outlined p-button-help p-button-sm mr-2 px-3"></button>
