--- a/src/app/layout/detail/detail.component.html
+++ b/src/app/layout/detail/detail.component.html
@@ -1,12 +1,14 @@
 <div class="background w-full px-6">
     <!-- <app-breadcrumb [items]="items" class="background"></app-breadcrumb> -->
-    <div class="flex flex-row mt-3 mb-3">
-        <app-detail-galery></app-detail-galery>
+    <div class="p-5">
+	    <div class="flex flex-row mt-0 mb-3">
+	        <app-detail-galery></app-detail-galery>
 
-        <div class="flex flex-column ">
-            <app-detail-card></app-detail-card>
-            <app-detail-info></app-detail-info>
-        </div>
+	        <div class="flex flex-column wrap-detail-info">
+	            <app-detail-card></app-detail-card>
+	            <app-detail-info></app-detail-info>
+	        </div>
 
+	    </div>
     </div>
 </div>
