--- a/src/app/layout/detail/detail.component.scss
+++ b/src/app/layout/detail/detail.component.scss
@@ -18,6 +18,9 @@
     content: "\e901";
     color: #9c27b0;
 }
+.wrap-detail-info{
+	width: 35%
+}
 
 // .p-button {
 //     background-color: white !important;
