--- a/src/app/map/components/carousel-map/carousel-map.component.html
+++ b/src/app/map/components/carousel-map/carousel-map.component.html
@@ -11,8 +11,8 @@
                     <div>
                         <!-- <h4 class="p-mb-1">{{product.name}}</h4> -->
                         <img class="product-image" [src]="product.image">
-                        <span class="product-text font-bold">{{product.title}}</span>
-                        <span class="product-text">{{product.subtitle}}</span>
+                        <span class="text-sm product-text font-bold">{{product.title}}</span>
+                        <span class="text-sm product-text">{{product.subtitle}}</span>
                         <!-- <span style="display: block;">${{product.price}}</span> -->
                     </div>
                 </div>
