--- a/src/app/map/components/icons/icons.component.html
+++ b/src/app/map/components/icons/icons.component.html
@@ -1,14 +1,34 @@
-<div class = "flex flex-row w-full">
-<div class = "flex justify-content-start w-6">
-    <div class = "flex flex-row ml-5">
-        <i style="font-size: 1.3rem;" class="opacity-50 pi pi-facebook mx-3"></i>
-        <i style="font-size: 1.3rem;" class="opacity-50 pi pi-twitter mx-3"></i>
-        <i style="font-size: 1.3rem;" class="opacity-50 pi pi-youtube mx-3"></i>
-        <i style="font-size: 1.3rem;" class="opacity-50 pi pi-check mx-3"></i>
-        <i style="font-size: 1.3rem;" class="opacity-50 pi pi-check mx-3"></i>
-    </div>
-</div>
-<div class = "flex justify-content-end w-6">
-    <div class = "text-xs mr-5">Tiendi SAC @ 2021</div>
-</div>
+<div class = "flex flex-row w-full footer-map py-2">
+	<div class = "flex justify-content-start w-6">
+	    <div class = "flex flex-row ml-5">
+	    	<span>
+	    		<a href="#">
+	        		<i class="opacity-50 pi pi-facebook text-2xl mx-3"></i>
+	    		</a>
+	    	</span>
+	    	<span>
+	    		<a href="#">
+	        		<i class="opacity-50 pi pi-twitter text-2xl mx-3"></i>
+	    		</a>
+	    	</span>
+	    	<span>
+	    		<a href="#">
+	        		<i class="opacity-50 pi pi-youtube text-2xl mx-3"></i>
+	    		</a>
+	    	</span>
+	    	<span>
+	    		<a href="#">
+	        		<i class="opacity-50 pi pi-check text-2xl mx-3"></i>
+	    		</a>
+	    	</span>
+	    	<span>
+	    		<a href="#">
+	        		<i class="opacity-50 pi pi-check text-2xl mx-3"></i>
+	    		</a>
+	    	</span>
+	    </div>
+	</div>
+	<div class = "flex justify-content-end w-6">
+	    <div class = "text-xs font-bold mr-5">Tiendi SAC @ 2021</div>
+	</div>
 </div>
