--- a/src/app/map/components/map-screen/map-screen.component.scss
+++ b/src/app/map/components/map-screen/map-screen.component.scss
@@ -1,6 +1,6 @@
 .mapa {
     width: 100%;
-    height: 87%;
+    height: 90%;
     // height: 100%;
     background-color: skyblue;
     overflow: hidden;
@@ -48,4 +48,8 @@
 
 :host ::ng-deep .mapboxgl-marker .mapboxgl-marker-anchor-center{
     padding-top: 10rem;
+}
+:host ::ng-deep .mapboxgl-ctrl-bottom-left,
+:host ::ng-deep .mapboxgl-ctrl-bottom-right{
+    display: none !important; 
 }
