--- a/src/app/map/components/toolbar/toolbar.component.html
+++ b/src/app/map/components/toolbar/toolbar.component.html
@@ -14,7 +14,7 @@
         type="button"
         style="color: #00695c"
         label="Sobre nosotros"
-        class="p-button-text font-bold mx-2 p-button-success"
+        class="p-button-text font-bold text-sm mx-2 p-button-success"
       ></button>
       <button
         pButton
@@ -22,7 +22,7 @@
         type="button"
         style="color: #00695c"
         label="Como funciona"
-        class="p-button-text font-bold mx-2 p-button-success"
+        class="p-button-text font-bold text-sm mx-2 p-button-success"
       ></button>
       <button
         style="color: #46d0be; border-color: #46d0be"
@@ -30,19 +30,19 @@
         pRipple
         type="button"
         label="¿Quieres vender?"
-        class="p-button-outlined p-button-rounded mx-2"
+        class="p-button-outlined text-sm p-button-rounded mx-2"
       ></button>
       <button
         style="color: white; background-color: #fd6435"
         pButton
         pRipple
         type="button"
-        class="p-button-rounded p-button-warning p-button-text mx-2"
+        class="text-sm p-button-rounded p-button-warning p-button-text mx-2"
         icon="material-icons-outlined"
         label="Ingresar"
         (click)="ingresarClick()"
       >
-        <i class="material-icons-outlined">account_circle</i>
+        <i class="material-icons-outlined text-lg">account_circle</i>
       </button>
     </div>
   </div>
